<resources>
    <string name="app_name">Labs</string>

    <string name="notification_about_development">
        К сожалению, данный раздел находится на стадии
        разработки, в ближайщее время будет сделан, а для того,
        чтобы посмотреть лабораторные работы, нажмите необходимую кнопку внизу
    </string>

    //generals names for layouts
    <string name="encrypt">Зашифровать</string>
    <string name="decrypt">Дешифровать</string>
    <string name="input_text">Введите текст</string>
    <string name="result">Результат</string>
    <string name="apply">Применить</string>
    <string name="count_of_int">Количество символов сдвига</string>
    <string name="code">Код шифра</string>
    <string name="cipher">Разные шифры</string>
    <string name="close">Закрыть</string>
    <string name="error_for_explatation">Объяснение не сделано</string>
    <string name="i_am_lazy">Мне было лень делать :)\nСкоро исправлю данный момент</string>
    <string name="open_key">Открытый ключ</string>
    <string name="create_keys">Создать ключи</string>
    <string name="close_key">Закрытый ключ</string>
    <string name="created_close_key">Созданный закрытый ключ</string>
    <string name="created_open_key">Созданный открытый ключ</string>
    <string name="generate">Сгенерировать</string>
    <string name="input_number_of_key_characters">Введите количество символов ключа</string>
    <string name="checking">Проверка</string>
    <string name="encrypt_message">Зашифрованное сообщение</string>
    <string name="key">Ключ</string>
    <string name="create_key">Сгенерировать ключ</string>
    <string name="generated_key">Сгенерированный ключ</string>

    // names for labs
    <string name="btn_lab1">Лабораторная работа 1</string>
    <string name="btn_lab2">Лабораторная работа 2</string>
    <string name="btn_lab3">Лабораторная работа 3</string>
    <string name="btn_lab4">Лабораторная работа 4</string>
    <string name="btn_lab5">Лабораторная работа 5</string>
    <string name="btn_lab6">Лабораторная работа 6</string>
    <string name="btn_lab7">Лабораторная работа 7</string>
    <string name="btn_lab8">Лабораторная работа 8</string>

    //First
    <string name="сaesar_cipher">Шифр Цезаря</string>
    <string name="number_of_shift">Количество символов сдвига</string>
    <string name="explanation_lab1">1</string>

    //Second
    <string name="name_for_gamming">Шифр гаммирования</string>
    <string name="explanation_lab2">2</string>


    //Third
    <string name="name_for_lab3">Сеть Фейштеля</string>
    <string name="count_of_rounds">Количество раундов</string>
    <string name="explanation_lab3">3</string>

    //Fourth
    <string name="explanation_lab4">4</string>
    <string name="text_for_name_lab4">Шифрование RSA</string>

    //Fifth
    <string name="explanation_lab5"></string>

    //Sixth
    <string name="explanation_lab6"></string>

    //Seventh
    <string name="explanation_lab7"></string>


    //Eighth
    <string name="explanation_lab8"></string>

    //code
    <string name="code_lab1">
    override fun encrypt(text: String, shift: Int): String {\n
        return caesarCipher(text, shift)\n
    }\n\n
    override fun decrypt(text: String, shift: Int): String {\n
        return caesarCipher(text, -shift)\n
    }\n\n
    override fun caesarCipher(text: String, shift: Int): String {\n
        val builder = StringBuilder()\n
        for (char in text) {\n
            if (char.isLetter()) {\n
                val base = when (char) {\n
                    in \'a\'..\'z\' -> \'a\'\n
                    in \'A\'..\'Z\' -> \'A\'\n
                    in \'а\'..\'я\' -> \'а\'\n
                    in \'А\'..\'Я\' -> \'А\'\n
                    else -> continue\n
                }\n
                val alphabetSize = when (base) {\n
                    \'a\', \'A\' -> 26\n
                    \'а\', \'А\' -> 32\n
                    else -> throw IllegalArgumentException("Unsupported alphabet")\n
                }\n
                val position = char.code - base.code\n
                val shiftedPosition = (position + shift) % alphabetSize\n
                val newChar = (base.code + shiftedPosition).toChar()\n
                builder.append(newChar)\n
            } else if (char.isDigit()) {\n
                val newChar = ((char - \'0\' + shift) % 10 + \'0\'.code).toChar()\n
                builder.append(newChar)\n
            } else {\n
                builder.append(char)\n
            }\n
        }\n
        return builder.toString()\n
    }
</string>

    <string name="code_lab2">

    override fun encrypt(text: String, key: ByteArray): ByteArray {\n
        val textBytes = text.toByteArray()\n
        return textBytes.mapIndexed { index, byte ->\n
            byte xor key[index]\n
        }.toByteArray()\n
    }\n\n

    override fun decrypt(encryptedText: ByteArray, key: ByteArray): String {\n
        val decryptedBytes = encryptedText.mapIndexed { index, byte ->\n
            byte xor key[index]\n
        }.toByteArray()\n
        return String(decryptedBytes)\n
    }</string>

    <string name="code_lab3"></string>
    <string name="code_lab4"></string>
    <string name="code_lab5"></string>
    <string name="code_lab6"></string>
    <string name="code_lab7"></string>
    <string name="code_lab8"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>