<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/input_text"
        android:inputType="textMultiLine" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/btn_decrypt"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_encrypt"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/encrypt" />

        <RadioButton
            android:id="@+id/btn_decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrypt" />
    </RadioGroup>


    <EditText
        android:id="@+id/symbol_shift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/number_of_shift"
        android:inputType="number" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/result"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/apply"
        android:visibility="invisible" />

</LinearLayout>
