<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/сaesar_cipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/сaesar_cipher"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/input_text"
        android:inputType="textMultiLine" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:checkedButton="@id/btn_decrypt"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btn_encrypt"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/encrypt" />

        <RadioButton
            android:id="@+id/btn_decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrypt" />
    </RadioGroup>

    <EditText
        android:id="@+id/symbol_shift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/number_of_shift"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/output_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_marginLeft="40dp"
            android:hint="@string/result"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/actionModeCopyDrawable"
            android:background="@android:color/darker_gray"
            android:saveEnabled="false"
            android:visibility="invisible"
            android:padding="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/apply"
        android:textSize="20dp"
        android:enabled="false"/>

</LinearLayout>
